# esphomenow-tree-ha

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  DOCS.md  Dockerfile  agents.md  config.yaml  dev.sh  esplog-master.py  fix_includes.py  fixplan15.md  log_listener.py  opencode.json  qc.sh  qc2.sh  repository.yaml  requirements.txt
.github/workflows/: builder.yaml
app/: __init__.py  bin_parser.py  bridge_constants.py  bridge_serial_client.py  bridge_v2_client.py  bridge_v2_ota.py  compile_store.py  compile_worker.py  compiler.py  db.py  discover_helper.py  models.py  network_discovery.py  ota_worker.py  pairing_store.py  restart_status.py  server.py  yaml_scaffold.py  yaml_store.py
app/protobuf/: esp_tree_runtime.proto
device_code/: AGENTS.md  README.md
device_code/demos/: README.md  espnow-bridge-c5-serial.yml  espnow-bridge-c5.yml  espnow-bridge-nomqtt.yml  espnow-microusb-1.yml  espnow-remote-1.yml  espnow-remote-2.yml  espnow-remote-aqua.yml  espnow-remote-esp01.yml  espnow-remote-esp12e.yml  espnow-remote-leaf.yml  espnow-remote-us1.yml  secrets.example.yaml
device_code/docs/: espnow_v3_spec.md  findings_8266_unicast.md  guide_usblog.md  ha-addon-plan.md  roadmap_lora.md  roadmap_lost_leaf.md  roadmap_serial_bridge.md  roadmap_support82xx_broadcast.md  workplan_multi_bridge.md
device_code/ha/: lovelace_topology_card.yaml
device_code/scripts/: check_protocol_sync.sh  device_uptime.py  ha_compile.sh  ha_esplog.sh  ha_esplog_serial.py  run_protocol_tests.sh
device_code/tests/: CMakeLists.txt  b6_fragment_interleaving_test.cpp  b7b_error_handling_test.cpp  b7c_boundary_test  b7c_boundary_test.cpp  bridge_api_proto_messages_test.cpp  bridge_ota_manager_test.cpp  cobs_codec_test.cpp  counter_test.cpp  encryption_test.cpp  file_receiver_test.cpp  fragment_assembly_test.cpp  heartbeat_parent_mac_test.cpp  hop_encoding_test.cpp  join_status_codes_test.cpp  packet_sizes_test.cpp  parse_helpers_test.cpp  protocol_test.cpp  retry_backoff_test.cpp  route_expiry_test.cpp  state_machine_test.cpp
device_code/tests/build_stage3/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  file_receiver_test
device_code/tests/build_stage3/Testing/Temporary/: CTestCostData.txt
device_code/tests/mocks/: CMakeLists.txt  esp_err.h  esp_idf_version.h  esp_now.h  test_time.cpp  test_time.h
device_code/tests/mocks/esphome/components/md5/: md5.h
device_code/tests/mocks/esphome/core/: hal.h  log.h
docs/: ESP_briefing.md  ESP_roadmap_workplan_serial_bridge.md  ESP_standalone.md  HA_workplan_multi_bridge.md  HA_workplan_wizard.md  api_protobuf_spec.md  db2.md  findings_restart.md  ha-addon-plan.md  integration_roadmap_spec.md  integration_roadmap_spec_INTEGRATED.md  roadmap_compile_ota_serial.md  serial_bridge_manual_test_checklist.md  workplan_db.md  workplan_full_esp_entity.md  workplan_mqtt_optional.md  workplan_single_api.md  workplan_wizard.md  workplan_wizard_bridgeflash.md  workplan_yaml.md
docs/ESP_archive/: OTA_blast_gap_implementation_plan.md  OTA_blast_gap_roadmap.md  api_protobuf_pivot.md  code_review.md  heartbeat_route_refactor.md  workplan_compile_q_fixes.md  workplan_db.md  workplan_single_api.md
docs/HA_archive/: HA_workplan_wizard.md  workplan_full_esp_entity.md  workplan_yaml.md
docs/archive_ignore/: integration_roadmap_spec_GPT54.md  workplan_compile_q.md  workplan_db.md  workplan_full_esp_entity.md
docs/layouts/: bridge_badge.html  queue_1.html  queue_2.html  queue_3.html  queue_4.html  queue_5.html  queue_6.html  queue_layout_fix.html  ui_DS4F_homeassistant.html  ui_glm_esphome.html  ui_glm_glassmorphism.html  ui_glm_homeassistant.html  ui_glm_modern.html  ui_glm_terminal.html  ui_mm_dark.html  ui_mm_esphome.html  ui_mm_modern.html
esp-tree-ha/: DOCS.md  Dockerfile  config.yaml  requirements.txt
esp-tree-ha/app/: bin_parser.py  bridge_v2_client.py  bridge_v2_ota.py  bridge_ws_client.py  compile_store.py  compile_worker.py  compiler.py  config.py  db.py  discover_helper.py  integration_ws_client.py  main.py  models.py  network_discovery.py  ota_chunks.py  ota_worker.py  preflight.py  remote_logger_dev_only.py  server.py  yaml_scaffold.py
esp-tree-ha/components/esp_tree_remote/standalone/: CMakeLists.txt  main.cpp  standalone_remote.cpp  standalone_remote.h
esp-tree-ha/components/esp_tree_remote/standalone/compat/esphome/core/: log.h
esp-tree-ha/components/espnow_lr_remote/standalone/: CMakeLists.txt
esp-tree-ha/tests/: test_v2_ota.py
esp-tree-ha/ui/: package.json  tsconfig.json
esphome-espnow-tree-ha/: .dockerignore  CHANGELOG.md  DOCS.md  Dockerfile  build.yaml  config.yaml  requirements.txt
esphome-espnow-tree-ha/app/: __init__.py  bin_parser.py  bridge_client.py  bridge_config.py  bridge_ws_client.py  bridge_ws_client.py.bak  bridge_ws_ota.py  compile_store.py  compile_worker.py  compiler.py  config.py  db.py  firmware_store.py  ha_client.py  integration_ws_client.py  models.py  network_discovery.py  ota_chunks.py  ota_worker.py  preflight.py  server.py  yaml_scaffold.py  yaml_store.py
esphome-espnow-tree-ha/components/bridge_lite/python/: pyproject.toml
esphome-espnow-tree-ha/components/bridge_lite/python/bridge_lite_client/: transport.py
esphome-espnow-tree-ha/components/bridge_lite/python/bridge_lite_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
esphome-espnow-tree-ha/components/bridge_lite/python/bridge_lite_client/proto/: espnow_bridge_pb2.py
esphome-espnow-tree-ha/components/bridge_lite/python/tests/: test_flow.py
esphome-espnow-tree-ha/docs/: workplan_queue.md  workplan_yaml.md
esphome-espnow-tree-ha/ui/: index.html  package-lock.json  package.json  vite.config.ts
ha_integration/tests/: conftest.py  test_alarm_control_panel.py  test_cobs_cross_platform.py  test_event.py  test_fan.py  test_light.py
logs/: esp_tree_debug.jsonl
scripts/: esplog-master.py  fix_includes.py  log_listener.py
test/: .env.example  Dockerfile.standalone  README.md  build.sh  protobuf_api.py  protobuf_api.sh  run-tests.sh  start-ha.sh  start.sh
ui/: index.html  package-lock.json  package.json
(+394 files in other folders)
