idf_component_register(
    SRCS
        "standalone_remote.cpp"
        "../remote_protocol.cpp"
        "../remote_file_receiver.cpp"
        "../../espnow_lr_common/espnow_crypto.cpp"
    INCLUDE_DIRS
        "compat"
        "."
        ".."
        "../.."
        "../../espnow_lr_common"
    REQUIRES
        esp_wifi
        esp_now
        esp_timer
        mbedtls
)
