[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bridge-lite-client"
version = "0.1.0"
description = "Python client for ESP-NOW LR Bridge Lite WebSocket protocol"
requires-python = ">=3.11"
dependencies = [
    "protobuf>=4.25",
    "websockets>=12.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 120